--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,7 @@ android {
 }
 
 dependencies {
-
+    implementation 'androidx.fragment:fragment-ktx:1.6.2'
     implementation libs.androidx.core.ktx
     implementation libs.androidx.appcompat
     implementation libs.material
